# dyn-wallpaper

./: Cargo.toml  LICENSE  README.md  requirements.txt  set_wallpaper.py
src/: cities.rs  images.rs  main.rs
